Closed
Bug 307756
Opened 20 years ago
Closed 20 years ago
<input type="image"> with -moz-user-input:none/disabled still processes events
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
Details
(Keywords: testcase)
Attachments
(2 files, 1 obsolete file)
|
815 bytes,
text/html
|
Details | |
|
1.30 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
<input type="image"> with -moz-user-input:none/disabled still processes events
when replaced by ALT text.
STEPS TO REPRODUCE
1. load the attached testcase
2. click on the text
ACTUAL RESULTS
The form is submitted
EXPECTED RESULTS
Same as when the image is shown - i.e. no event processing
| Assignee | ||
Updated•20 years ago
|
Assignee: nobody → mats.palmgren
| Assignee | ||
Comment 1•20 years ago
|
||
| Assignee | ||
Comment 2•20 years ago
|
||
Use the primary frame if no nsIFormControlFrame can be found for type="image"
for testing '-moz-user-input'.
Attachment #195441 -
Flags: superreview?(bzbarsky)
Attachment #195441 -
Flags: review?(bzbarsky)
Comment 3•20 years ago
|
||
Comment on attachment 195441 [details] [diff] [review]
Patch rev. 1
Why are we even bothering with GetFormControlFrame when all we want is the
primary frame?
| Assignee | ||
Comment 4•20 years ago
|
||
There is some special handling here:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/content/html/content/src/nsGenericHTMLElement.cpp&rev=1.606&root=/cvsroot&mark=2275-2276#2261
I wasn't sure what that meant for the style context...
Comment 5•20 years ago
|
||
That handling is really not an issue anymore, since we no longer support
:before/:after on replaced elements... If we ever add back support, we'll have
to audit all out GetPrimaryFrameFor() calls anyway.
| Assignee | ||
Comment 6•20 years ago
|
||
Attachment #195441 -
Attachment is obsolete: true
Attachment #195448 -
Flags: superreview?(bzbarsky)
Attachment #195448 -
Flags: review?(bzbarsky)
| Assignee | ||
Updated•20 years ago
|
Attachment #195441 -
Flags: superreview?(bzbarsky)
Attachment #195441 -
Flags: review?(bzbarsky)
Updated•20 years ago
|
Attachment #195448 -
Flags: superreview?(bzbarsky)
Attachment #195448 -
Flags: superreview+
Attachment #195448 -
Flags: review?(bzbarsky)
Attachment #195448 -
Flags: review+
| Assignee | ||
Comment 7•20 years ago
|
||
Checked in to trunk at 2005-09-10 04:02 PDT
-> FIXED
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•