Don't process events for -moz-user-input:none/disabled also when element is replaced by ALT content. b=307756 r+sr=bzbarsky